# MultiAgent-LLM-CrewAI

./: README.md  pyproject.toml
1_pdf/: 1_crew.py
backend/: api.py
db/: chroma.sqlite3
