[tool.poetry]
name = "multiagent-llm-crewai"
version = "0.1.0"
description = ""
authors = ["Rehmana Younis"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-anthropic = "^0.1.20"
langchain-google-genai = "^1.0.5"
langchain-google-firestore = "^0.3.0"
firestore = "^0.0.8"
tiktoken = "^0.7.0"
sentence-transformers = "^3.0.0"
bs4 = "^0.0.2"
firecrawl-py = "^0.0.20"
langchainhub = "^0.1.18"
wikipedia = "^1.4.0"
tavily-python = "^0.3.3"
pypdf = "^4.3.1"
giskard = {extras = ["llm"], version = "^2.14.4"}
ipython = "^8.26.0"
faiss-cpu = "1.7.4"
jupyter = "^1.0.0"
p2j = "^1.3.2"
ragas = "^0.1.15"
ipykernel = "^6.29.5"
streamlit = "^1.38.0"
streamlit-jupyter = "^0.2.1"
import-ipynb = "^0.1.4"
flask = "^3.0.3"
chromadb = "^0.4.22"
crewai-tools = "^0.4.26"
embedchain = {version = "^0.1.116", extras = ["youtube"]}
ollama = "^0.2.1"
crewai = "^0.41.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 

